--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -1,6 +1,6 @@
 Package: STAT302package
 Title: Project3 Package for STAT302
-Version: 0.0.0.9000
+Version: 0.1.0
 Authors@R: 
     person(given = "Judy",
            family = "Tian",
@@ -12,3 +12,6 @@ Encoding: UTF-8
 LazyData: true
 Roxygen: list(markdown = TRUE)
 RoxygenNote: 7.1.1
+Suggests: 
+    testthat (>= 3.0.0)
+Config/testthat/edition: 3
