--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -17,6 +17,13 @@ Suggests:
     rmarkdown,
     testthat (>= 3.0.0)
 Config/testthat/edition: 3
+Imports: 
+    tibble,
+    dplyr,
+    class,
+    randomForest,
+    magrittr,
+    stats
 Depends: 
     R (>= 2.10)
 VignetteBuilder: knitr
