--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -24,7 +24,8 @@ Imports:
     randomForest,
     magrittr,
     stats,
-    ggplot2
+    ggplot2,
+    kableExtra
 Depends: 
     R (>= 2.10)
 VignetteBuilder: knitr
